--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^1.0.0-beta.73",
+    "astro": "^1.0.6",
     "github-slugger": "^1.4.0"
   },
   "dependencies": {}
